--- a/view/index.ejs
+++ b/view/index.ejs
@@ -12,9 +12,11 @@
     <button type="submit">Login</button>
   </form>
   <form action="/register" method="POST">
-    <input type="text" name="username" placeholder="New Username" required />
-    <input type="password" name="password" placeholder="New Password" required />
-    <button type="submit">Register</button>
+    <input type="text" name="username" placeholder="Username" required />
+<input type="password" name="password" placeholder="Password" required />
+<input type="password" name="confirmPassword" placeholder="Confirm Password" required />
+<button type="submit">Register</button>
+
   </form>
 </body>
 </html>
