--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,9 +12,11 @@
   </form>
 
   <form method="POST" action="/register">
-    <input name="username" placeholder="Username" required />
-    <input name="password" type="password" placeholder="Password" required />
-    <button>Register</button>
-  </form>
+  <input type="text" name="username" placeholder="Username" required />
+  <input type="password" name="password" placeholder="Password" required />
+  <input type="password" name="confirmPassword" placeholder="Confirm Password" required />
+  <button type="submit">Register</button>
+</form>
+
 </body>
 </html>
