--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -11,6 +11,11 @@
       <h2>PingMe - Welcome, <%= username %>!</h2>
       <a href="/logout" style="color: white;">Logout</a>
     </header>
+    
+    <div class="sidebar">
+      <h3>Online Users</h3>
+      <ul id="user-list"></ul>
+    </div>
 
     <ul id="messages"></ul>
 
