Made some changes in the emoji button

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -4,7 +4,8 @@
   <meta charset="UTF-8" />
   <title>PingMe Chat</title>
   <link rel="stylesheet" href="/style.css" />
-  <script src="https://cdn.jsdelivr.net/npm/@joeattardi/emoji-button@4.6.2/dist/index.min.js"></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/@joeattardi/emoji-button@4.6.2/dist/index.min.js"></script>
+  <script defer src="/your-script.js"></script>
 </head>
 <body>
   <div class="sidebar">
@@ -42,17 +43,19 @@
     let currentTarget = null;
     let typingTimeout;
 
-    const picker = new EmojiButton({
-      theme: 'dark'
-    });
+    const picker = new EmojiButton({ theme: 'dark' });
+
+  emojiBtn.addEventListener('click', () => {
+    picker.togglePicker(emojiBtn);
+  });
+
+  picker.on('emoji', emoji => {
+    input.value += emoji;
+    input.focus();
+  });
 
     emojiBtn.addEventListener('click', () => {
       picker.togglePicker(emojiBtn);
-    });
-
-    picker.on('emoji', emoji => {
-      input.value += emoji;
-      input.focus();
     });
 
     form.addEventListener('submit', (e) => {
